# feup-pfl

./: Project_Evaluate_Issues.md  Project_info_issues.md  README.md
PRJ1/: README.md
PRJ1/src/: ai.pl  assets.pl  boards.pl  game.pl  input_output.pl  logic.pl  main.pl  menu.pl  run.pl  utils.pl
PRJ1/src/tests.pl/: logic_test.pl
PRJ2/: Assembler.hs  CHANGELOG.md  Compiler.hs  ImperativeLanguage.hs  Lexer.hs  MachineStructures.hs  Main.hs  PRJ2.cabal  Parser.hs  README.md  Readme.md  Tests.hs  main.hs
PRJ2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
PRJ2/dist-newstyle/packagedb/ghc-8.8.4/: PRJ2-0.1.0.0-inplace.conf  package.cache
PRJ2/dist-newstyle/packagedb/ghc-9.2.5/: PRJ2-0.1.0.0-inplace.conf  package.cache
PRJ2/dist-newstyle/packagedb/ghc-9.4.7/: PRJ2-0.1.0.0-inplace.conf  package.cache
PRJ2/docs/: readme.md
PRJ2/src/: Assembler.hs  Compiler.hs  ImperativeLanguage.hs  Lexer.hs  MachineStructures.hs  Main  Main.hs  MainUnitTests.hs  PRJ2.cabal  Parser.hs  ParserV2.hs
PRJ2/src/Tests/: AssemblerTests.hs  CompilerTests.hs  ImperativeLanguageTests.hs  IntegrationTests.hs  LexerTests.hs  MachineStructuresTests.hs  ParserTests.hs  PropertyTests.hs  Tests.hs
PRJ2/src/app/: Main.hs
PRJ2/src/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
PRJ2/src/dist-newstyle/packagedb/ghc-9.2.5/: PRJ2-0.1.0.0-inplace.conf  package.cache
PRJ2/src/dist-newstyle/packagedb/ghc-9.4.7/: PRJ2-0.1.0.0-inplace.conf  package.cache
