name:                PRJ2
version:             0.1.0.0
-- other metadata like synopsis, description, license, etc.

cabal-version:       >=1.10
build-type:          Simple

-- Library section
library
  exposed-modules:     Assembler
                       , MachineStructures
                       , Parser
                       , Lexer
                       , ImperativeLanguage
                       , Compiler

  hs-source-dirs:      src
  build-depends:       base >=4.12 && <4.18
                       , containers >=0.6.5.1
  default-language:    Haskell2010

-- Executable section
executable PRJ2-exe
  main-is:             Main.hs
  hs-source-dirs:      src/app
  build-depends:       base
                        , PRJ2
  default-language:    Haskell2010

-- Test suite sections
test-suite MachineStructuresTests
  main-is:             MachineStructuresTests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       , PRJ2
                       , HUnit
  default-language:    Haskell2010

test-suite GeneralTests
  main-is:             Tests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       , PRJ2
                       , HUnit >=1.6
  default-language:    Haskell2010

test-suite PropertyTests
  main-is:             PropertyTests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       , PRJ2
                       , HUnit >=1.6 
                          , QuickCheck
  default-language:    Haskell2010

test-suite AssemblerTests
  main-is:             AssemblerTests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       , PRJ2
                       , HUnit >=1.6
  default-language:    Haskell2010

test-suite ImperativeLanguageTests
  main-is:             ImperativeLanguageTests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       , PRJ2
                       , HUnit >=1.6
  default-language:    Haskell2010

test-suite CompilerTests
  main-is:             ImperativeLanguageTests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       , PRJ2
                       , HUnit >=1.6
  default-language:    Haskell2010

test-suite ParserTests
  main-is:             ParserTests.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tests
  build-depends:       base
                        , containers >=0.6.5.1
                       ,HUnit >=1.6
                       , HUnit
  default-language:    Haskell2010