name:                PRJ2
version:             0.1.0.0
-- other metadata like synopsis, description, license, etc.

cabal-version:       >=1.10
build-type:          Simple

-- Library section
library
    exposed-modules:     Assembler
                        , MachineStructures
                        , Lexer
                        , Parser
                        , ImperativeLanguage
                        , Compiler
                        , Main,
                        MainUnitTests

    build-depends:       base >=4.12 && <4.18
                        , containers >=0.6.5.1 ,
                        HUnit >=1.6
    default-language:    Haskell2010

-- Executable section
executable PRJ2-exe
    main-is:             Main.hs
    hs-source-dirs:      app
    build-depends:       base
                          , PRJ2,
                          HUnit >=1.6
    default-language:    Haskell2010

-- Test suite sections
test-suite MachineStructuresTests
    main-is:             MachineStructuresTests.hs
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Tests
    build-depends:       base
                          , containers >=0.6.5.1
                        , PRJ2
                        , HUnit >=1.6
    default-language:    Haskell2010


-- test-suite PropertyTests
--     main-is:             PropertyTests.hs
--     type:                exitcode-stdio-1.0
--     hs-source-dirs:      src/Tests
--     build-depends:       base
--                           , containers >=0.6.5.1
--                         , PRJ2
--                         , HUnit >=1.6 
--                             , QuickCheck
--     default-language:    Haskell2010

test-suite AssemblerTests
    main-is:             AssemblerTests.hs
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Tests
    build-depends:       base
                          , containers >=0.6.5.1
                        , PRJ2
                        , HUnit >=1.6
    default-language:    Haskell2010


test-suite CompilerTests
    main-is:             CompilerTests.hs
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Tests
    build-depends:       base
                          , containers >=0.6.5.1
                        , PRJ2

                        , HUnit >=1.6
    default-language:    Haskell2010


test-suite LexerTests
    main-is:             LexerTests.hs
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Tests
    build-depends:       base
                          , containers >=0.6.5.1
                        , PRJ2
                        , HUnit >=1.6
    default-language:    Haskell2010

test-suite ParserTests
    main-is:             ParserTests.hs
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Tests
    build-depends:       base
                          , containers >=0.6.5.1
                        , PRJ2

                        , HUnit >=1.6
    default-language:    Haskell2010

test-suite IntegrationTests
    main-is:             IntegrationTests.hs
    type:                exitcode-stdio-1.0
    hs-source-dirs:      Tests
    build-depends:       base
                          , containers >=0.6.5.1
                        , PRJ2

                        , HUnit >=1.6
    default-language:    Haskell2010